--- a/src/main/resources/alhambra-spec.yaml
+++ b/src/main/resources/alhambra-spec.yaml
@@ -237,19 +237,6 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/currency'
-  '/test':
-    get:
-      tags:
-        - data
-      summary: test
-      operationId: getTest
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: String
   '/scoring/{round}':
     parameters:
       - name: round
@@ -498,7 +485,24 @@ paths:
           description: Action not performed due to conflict with game rule.
         '422':
           description: Game or player does not exist.
-
+    post:
+      tags:
+        - game
+      summary: start the game
+      operationId: startGame
+      security:
+        - playerToken: []
+      responses:
+        '200':
+          $ref: '#/components/schemas/game'
+        '401':
+          description: Absent or mallformed authentication
+        '403':
+          description: Forbidden because the player token does not grant access for this action.
+        '409':
+          description: Action not performed due to conflict with game rule.
+        '422':
+          description: Game or player does not exist.
   '/games/{gameId}/players/{playerName}/money':
     parameters:
       - name: gameId
