--- a/src/main/resources/alhambra-spec.yaml
+++ b/src/main/resources/alhambra-spec.yaml
@@ -307,11 +307,16 @@ paths:
           schema:
             type: object
             properties:
-             customGameName:
-              type: string
-              example:
+              numberOfPlayers:
+                type: integer
+                example:
+                 numberOfPlayers: "4"
+              customGameName:
+               type: string
+               example:
                 customGameName: "name"
             required:
+             - numberOfPlayers
              - customGameName
       responses:
         '200':
