change property name to maxNumberOfPlayers for clarity

--- a/src/main/resources/alhambra-spec.yaml
+++ b/src/main/resources/alhambra-spec.yaml
@@ -307,16 +307,16 @@ paths:
           schema:
             type: object
             properties:
-              numberOfPlayers:
+              maxNumberOfPlayers:
                 type: integer
                 example:
-                 numberOfPlayers: "4"
+                  maxNumberOfPlayers: "4"
               customGameName:
                type: string
                example:
                 customGameName: "name"
             required:
-             - numberOfPlayers
+             - maxNumberOfPlayers
              - customGameName
       responses:
         '200':
