add minimum and maximum to spec body for number of players

--- a/src/main/resources/alhambra-spec.yaml
+++ b/src/main/resources/alhambra-spec.yaml
@@ -309,6 +309,8 @@ paths:
             properties:
               maxNumberOfPlayers:
                 type: integer
+                minimum: 2
+                maximum: 6
                 example:
                   maxNumberOfPlayers: "4"
               customGameName:
