Add build method to Game

--- a/src/main/resources/alhambra-spec.yaml
+++ b/src/main/resources/alhambra-spec.yaml
@@ -312,7 +312,7 @@ paths:
                 minimum: 2
                 maximum: 6
                 example:
-                  maxNumberOfPlayers: "4"
+                  maxNumberOfPlayers: 4
               customGameName:
                type: string
                example:
